# enpm808x-robotics-detection-module

./: .travis.yml  CMakeLists.txt  LICENSE.md  readme.md
app/: CMakeLists.txt  Camera.cpp  Detection.cpp  Robot.cpp  main.cpp
doc/html/: _8ycm__extra__conf_8py.html  _8ycm__extra__conf_8py_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8cpp__incl.md5  _camera_8cpp_source.html  _camera_8hpp.html  _camera_8hpp__dep__incl.map  _camera_8hpp__dep__incl.md5  _camera_8hpp__incl.map  _camera_8hpp__incl.md5  _camera_8hpp_source.html  _detection_8cpp.html  _detection_8cpp__incl.map  _detection_8cpp__incl.md5  _detection_8cpp_source.html  _detection_8hpp.html  _detection_8hpp.js  _detection_8hpp__dep__incl.map  _detection_8hpp__dep__incl.md5  _detection_8hpp__incl.map  _detection_8hpp__incl.md5  _detection_8hpp_source.html  _l_i_c_e_n_s_e_8md.html  _l_i_c_e_n_s_e_8md_source.html  _mock_camera_8cpp.html  _mock_camera_8cpp.js  _mock_camera_8cpp__incl.map  _mock_camera_8cpp__incl.md5  _mock_camera_8cpp_source.html  _mock_detection_8cpp.html  _mock_detection_8cpp.js  _mock_detection_8cpp__incl.map  _mock_detection_8cpp__incl.md5  _mock_robot_8cpp.html  (+117 more)
include/: Camera.hpp  Detection.hpp  Module.hpp  Robot.hpp  Sensor.hpp  lib.hpp  mockCamera.hpp
result/: cppCheck.txt  cppLint.txt  valgrind.txt
test/: CMakeLists.txt  MockCamera.cpp  MockDetection.cpp  MockRobot.cpp  main.cpp  mockCamera.cpp  mockDetection.cpp
(+93 files in other folders)
